--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "02-coffee-delivery",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host=0.0.0.0",
+    "dev": "vite --port 30001",
     "dev:server": "json-server server.json -p 3334 -w",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx",
+    "start": "vite --port 30001"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
